# ai-for-developers-project-386

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  vite.config.ts
.opencode/tools/: render-deploy-check.ts
api/: main.tsp
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  dependencies.py  errors.py  main.py  models.py  services.py  storage.py  time_utils.py
backend/app/routers/: __init__.py  availability.py  bookings.py  event_types.py  owner_settings.py  settings.py  slots.py
backend/tests/: conftest.py  test_api.py  test_services.py
src/: App.tsx  index.css  router.tsx
src/api/: client.ts  generated.ts  openapi.json  query.ts  types.ts
src/components/: GuestLayout.tsx  OwnerLayout.tsx  SlotGrid.tsx
src/components/admin/: BookingCard.tsx  BookingList.tsx  EventTypeManager.tsx  OwnerSettingsForm.tsx  ScheduleView.tsx
src/components/booking/: BookingForm.tsx  BookingSuccess.tsx  BookingSummary.tsx  EventTypeCard.tsx  OwnerProfile.tsx  SlotCalendar.tsx  SlotList.tsx
src/hooks/: useCancelBooking.ts  useCreateBooking.ts  useEventTypes.ts  useOwnerBookings.ts  useOwnerEventTypes.ts  useOwnerSettings.ts  useSlots.ts  useUpdateSettings.ts
src/pages/: AdminPage.tsx  Availability.tsx  BookingPage.tsx  Bookings.tsx  Dashboard.tsx  EventTypes.tsx  EventTypesPage.tsx  GuestCalendar.tsx  HomePage.tsx
src/services/: apiClient.ts  availabilityService.ts  bookingService.ts  eventTypeService.ts  slotService.ts
src/utils/: guestEmail.ts
tests/e2e/: scenarios.md
(+3 files in other folders)
