[tool.poetry]
name = "booking-api"
version = "0.1.0"
description = "Booking API по TypeSpec контракту"
authors = ["Developer"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
